generator/Ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: 
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.className: "nginx"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: "simplek8s.com"
    http:
      paths:
      - backend: 
          resource:
          service:
            name: web-service-lb
            port:
              name: 
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts: 
    secretName:
